# dispa

./: .gitignore  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_DIAGNOSIS.md  ARCHITECTURE_FIXES_STATUS.md  ARCHITECTURE_IMPROVEMENTS_COMPLETE.md  ARCHITECTURE_REVIEW.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  FINAL_ARCHITECTURE_REVIEW.md  FINAL_SUMMARY.md  IMPLEMENTATION_PLAN.md  Makefile  PROJECT_ISSUES_ANALYSIS.md  QUICKSTART.md  README.md  UNWRAP_FIXING_PROGRESS.md  USER_MANUAL.md  audit.toml  build_rs_cov.profraw  docker-compose.yml
.github/workflows/: ci.yml  qa.yml  release.yml
config/: config.example.toml  config.toml  plugins-example.toml  routing-plugins-example.toml
coverage-report/: tarpaulin-report.html
data/: .gitkeep
docs/: ADMIN.md  AGENTS.md  API.md  CI.md  CONFIG.md  DATABASE.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_STANDARDS.md  MILESTONES.md  PHASE1_TASKS.md  PLUGINS.md  ROADMAP.md  SECURITY.md  USER_MANUAL.md  USER_MANUAL_EN.md  git-hooks.md
docs/llm-friendly/: CLAUDE.md  CODE_TEMPLATES.md  LLM_GUIDE.md  LLM_IMPROVEMENT_REPORT.md  LLM_PLAN.md  NAMING_CONVENTIONS.md  REFACTORING_PLAN.md
examples/plugins/: cmd_block.sh  cmd_headers.sh
examples/wasm/: README.md  filter.wat
examples/wasm/rust-plugin/: Cargo.toml
examples/wasm/rust-plugin/src/: lib.rs
logs/: .gitkeep
migrations/postgres/: 0001_init.sql
migrations/sqlite/: 0001_init.sql
scripts/: qa.sh  test_with_timeout.py
src/: app_state.rs  circuit_breaker.rs  error.rs  graceful_shutdown.rs  lib.rs  main.rs  performance.rs  retry.rs  routing.rs  security.rs  state.rs  tls.rs
src/balancer/: algorithms.rs  enhanced_algorithms.rs  health_check.rs  load_balancer.rs  load_balancer_backup.rs  metrics.rs  mod.rs  state.rs
src/cache/: advanced_strategies.rs  etag.rs  mod.rs  policy.rs  storage.rs
src/config/: cache.rs  http_client.rs  logging.rs  manager.rs  mod.rs  monitoring.rs  num_cpus.rs  plugins.rs  server.rs  service_discovery.rs  targets.rs
src/logger/: cleanup.rs  database.rs  file_logger.rs  mod.rs  models.rs  traffic_logger.rs  traffic_logger_old.rs
src/monitoring/: admin.rs  collector.rs  data.rs  enhanced_metrics.rs  handlers.rs  health.rs  metrics.rs  mod.rs  realtime_alerting.rs  server.rs
src/plugins/: builtin.rs  engine.rs  executor.rs  factory.rs  mod.rs  traits.rs  wasm.rs
src/protocol/: grpc.rs  http.rs  mod.rs  tcp.rs  traits.rs  udp.rs  websocket.rs
src/proxy/: cached_handler.rs  handler.rs  http_client.rs  http_server.rs  mod.rs  request_forwarder.rs  request_processor.rs  server.rs  server_backup.rs  server_core.rs
src/routing/: actions.rs  conditions.rs  config.rs  engine.rs  mod.rs
src/security/: advanced_protection.rs  basic_config.rs  config.rs  core.rs  enhanced_auth.rs  jwt.rs  mod.rs  responses.rs  utils.rs
src/security/auth/: audit.rs  auth_core.rs  config.rs  manager.rs  mfa.rs  mod.rs  session.rs
src/service_discovery/: consul.rs  dns.rs  etcd.rs  kubernetes.rs  mod.rs  tests.rs  traits.rs
tests/: cache_edge_tests.rs  circuit_breaker_edge_tests.rs  end_to_end_tests.rs  health_check_integration_tests.rs  integration_tests.rs  load_balancer_edge_tests.rs  plugin_edge_tests.rs  service_discovery_integration_tests.rs
