[package]
name = "dispa"
version = "0.1.0"
edition = "2021"
authors = ["iannil <zhurongx@gmail.com>"]
description = "A high-performance traffic interception and forwarding proxy"
license = "MIT"

[dependencies]
# Core dependencies - used throughout the application
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
once_cell = "1.19"

# HTTP and networking stack - consistent versions for compatibility
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = { version = "0.24", features = ["webpki-roots"] }
rustls = "0.22"
rustls-pemfile = "2.0"
tokio-rustls = "0.25"

# Configuration management
config = "0.14"
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
notify = "6.1"

# Database and storage
sqlx = { version = "0.8.2", default-features = false, features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid", "tls-rustls"] }

# Monitoring and metrics
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.12"

# Utilities and helpers
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.5"
rand = "0.8"
sha1 = "0.10"  # For WebSocket key generation
sha2 = "0.10"
base64 = "0.22"
bcrypt = "0.15"
regex = "1.11.2"
url = "2.5.7"
flate2 = "1.0"  # For gzip compression
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }

# Optional JWT RS256 verification (ring), and JWKS fetch (reqwest)
ring = { version = "0.17", optional = true }

# Optional WASM runtime
wasmtime = { version = "34", optional = true }
wasmtime-wasi = { version = "34", optional = true }

# Service Discovery dependencies
async-trait = "0.1"
tokio-stream = "0.1"
trust-dns-resolver = "0.23"

# Consul client (optional)
consul = { version = "0.4", optional = true }

# etcd client (optional)
etcd-rs = { version = "1.0", optional = true }

# Kubernetes client (optional)
kube = { version = "0.87", optional = true }
k8s-openapi = { version = "0.20", features = ["latest"], optional = true }

[dev-dependencies]
wiremock = "0.6"
tempfile = "3.8"

[features]
default = []
# Enable external command plugin support (off by default for safety)
cmd-plugin = []
# Enable WASM plugin support (PoC, off by default)
wasm-plugin = ["wasmtime", "wasmtime-wasi"]
# Enable JWT RS256 verification via ring
jwt-rs256 = ["ring"]
# Enable JWKS fetch via reqwest
jwt-rs256-net = ["jwt-rs256"]
# Enable Consul service discovery
consul-discovery = ["consul"]
# Enable etcd service discovery
etcd-discovery = ["etcd-rs"]
# Enable Kubernetes service discovery
kubernetes-discovery = ["kube", "k8s-openapi"]
# Enable all service discovery backends
service-discovery-all = ["consul-discovery", "etcd-discovery", "kubernetes-discovery"]
